Refactor HTML structure and update styles
Updated the title, meta tags, and various text elements for clarity and branding. Adjusted styles for better layout and consistency.

--- a/test.html
+++ b/test.html
@@ -1,79 +1,110 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-GB">
 <head>
 <meta charset="UTF-8">
-<title>External Property Makeover Estimate Calculator</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>External Property Makeover Calculator | Home Repairs 4U</title>
+<link rel="icon" href="/favicon.png" type="image/png">
+<link rel="preload" as="image" href="/images/logo.webp" />
 
 <style>
-body {
-font-family: Arial, Helvetica, sans-serif;
-background:#f2f2f2;
-padding:20px;
+body{
+margin:0;
+padding:0;
+font-family:Arial, sans-serif;
+background:#f9f9f9;
+color:#222;
+line-height:1.65;
 }
-.calculator {
-max-width: 950px;
-margin:auto;
+header{
+text-align:center;
+padding:25px 10px;
 background:#fff;
-padding:30px;
-border-radius:8px;
+border-bottom:4px solid #27ae60;
 }
-h1 { text-align:center; }
-h3 {
+.logo{
+max-height:90px;
+width:auto;
+}
+.call-btn{
+display:inline-block;
+margin-top:18px;
+padding:14px 28px;
+background:#000;
+color:#fff;
+font-size:19px;
+text-decoration:none;
+font-weight:bold;
+border-radius:6px;
+border:2px solid #000;
+}
+.call-btn:hover{
+background:#333;
+}
+main{
+max-width:950px;
+margin:0 auto;
+background:#fff;
+padding:30px 20px;
+}
+h1,h2,h3{color:#111;}
+label{display:block;margin:8px 0;}
+input[type="number"],select{width:240px;padding:6px;}
+button{
 margin-top:30px;
-border-bottom:1px solid #ddd;
-padding-bottom:5px;
-}
-label { display:block; margin:8px 0; }
-input[type="number"], select {
-width:240px;
-padding:6px;
-}
-button {
-margin-top:30px;
-background:#1c7c45;
+background:#000;
 color:#fff;
 border:none;
 padding:15px 30px;
 font-size:18px;
-border-radius:5px;
+border-radius:6px;
 cursor:pointer;
+font-weight:bold;
 }
-button:hover { background:#155f35; }
-.result {
+button:hover{background:#333;}
+.result{
 margin-top:30px;
 padding:25px;
 background:#eef7f0;
 border-radius:6px;
+font-size:18px;
 }
-.small {
-font-size:14px;
-color:#555;
-}
-.extra-group {
+.small{font-size:14px;color:#555;}
+.extra-group{
 background:#fafafa;
 padding:15px;
 border-radius:5px;
 margin-top:15px;
-}
-.breakdown ul {
-margin-top:10px;
 }
 </style>
 </head>
 
 <body>
 
-<div class="calculator">
+<!-- HEADER EXACT MATCH -->
+<header>
+<img src="/images/logo.webp"
+alt="Home Repairs 4U logo"
+class="logo"
+width="600" height="200"
+loading="eager">
+<div style="text-align:center; margin-top:10px;">
+<a href="https://steely1968.github.io/"
+style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
+</div>
+<br>
+<a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
+</header>
+
+<main>
 
 <h1>External Property Makeover Estimate Calculator</h1>
 
 <p class="small">
-This calculator provides a fixed-price estimate for full external makeovers.
-Only the basic property details are required — all services below are optional.
+This calculator is for full external property makeovers. Only the core property details are required — all services below are optional.
 </p>
 
-<!-- REQUIRED PROPERTY DETAILS -->
-<h3>1. Property Type</h3>
+<h3>Property Type</h3>
 <select id="propertyType" required>
 <option value="">-- Select --</option>
 <option value="bungalow">Bungalow</option>
@@ -82,10 +113,10 @@ Only the basic property details are required — all services below are optional
 <option value="detached">Detached</option>
 </select>
 <p class="small">
-This helps us understand your property structure, access requirements and allows accurate future pricing.
+We ask this to understand your property structure, access requirements, and to allow accurate pricing for optional services.
 </p>
 
-<h3>2. Number of Bedrooms</h3>
+<h3>Number of Bedrooms</h3>
 <select id="bedrooms" required>
 <option value="">-- Select --</option>
 <option value="1">1</option>
@@ -95,37 +126,28 @@ This helps us understand your property structure, access requirements and allows
 <option value="5+">5+</option>
 </select>
 
-<h3>3. UPVC Conservatory</h3>
+<h3>UPVC Conservatory</h3>
 <select id="conservatory" required>
 <option value="">-- Select --</option>
 <option value="yes">Yes</option>
 <option value="no">No</option>
 </select>
 
-<h3>4. Number of Storeys</h3>
+<h3>Number of Storeys</h3>
 <select id="storeys" required>
 <option value="1">1</option>
 <option value="2">2</option>
 <option value="3">3</option>
 </select>
 
-<!-- PAINTING -->
-<h3>5. Exterior Painting (Optional)</h3>
+<h3>Exterior Painting (Optional)</h3>
 <p class="small">Leave blank if painting is not required.</p>
+<label>Front elevation length (m)<input type="number" id="front" step="0.1"></label>
+<label>Rear elevation length (m)<input type="number" id="rear" step="0.1"></label>
+<label>Side left elevation length (m)<input type="number" id="sideLeft" step="0.1"></label>
+<label>Side right elevation length (m)<input type="number" id="sideRight" step="0.1"></label>
 
-<label>Front elevation length (metres)
-<input type="number" id="front" step="0.1"></label>
-
-<label>Rear elevation length (metres)
-<input type="number" id="rear" step="0.1"></label>
-
-<label>Side left elevation length (metres)
-<input type="number" id="sideLeft" step="0.1"></label>
-
-<label>Side right elevation length (metres)
-<input type="number" id="sideRight" step="0.1"></label>
-
-<h3>Wall Surface Type</h3>
+<h3>Wall Surface</h3>
 <select id="surface">
 <option value="28">Render</option>
 <option value="32">Pebbledash</option>
@@ -140,33 +162,23 @@ This helps us understand your property structure, access requirements and allows
 <label><input type="radio" name="access" value="750"> Scaffold over conservatory</label>
 <label><input type="radio" name="access" value="1200"> Full scaffold</label>
 
-<!-- GUTTERING -->
-<h3>6. Optional – Guttering Services</h3>
+<h3>Optional – Guttering</h3>
 <div class="extra-group">
-<label><input type="checkbox" id="gc"> Gutter clearing</label>
-<input type="number" id="gcm" placeholder="Metres">
-
-<label><input type="checkbox" id="gw"> Gutter & fascia washing</label>
-<input type="number" id="gwm" placeholder="Metres">
-
-<label><input type="checkbox" id="gr"> Gutter replacement</label>
-<input type="number" id="grm" placeholder="Metres">
+<label><input type="checkbox" id="gc"> Gutter clearing</label><input type="number" id="gcm">
+<label><input type="checkbox" id="gw"> Gutter & fascia washing</label><input type="number" id="gwm">
+<label><input type="checkbox" id="gr"> Gutter replacement</label><input type="number" id="grm">
 </div>
 
-<!-- UPVC -->
-<h3>7. Optional – UPVC Restoration</h3>
+<h3>Optional – UPVC Restoration</h3>
 <div class="extra-group">
 <label><input type="checkbox" id="upvcRestore"> Restore UPVC frames</label>
 <label><input type="checkbox" id="upvcConservatory"> Restore conservatory frames</label>
 <label><input type="checkbox" id="upvcRoof"> Clean conservatory roof</label>
 </div>
 
-<!-- PRESSURE WASHING -->
-<h3>8. Optional – Pressure Washing</h3>
+<h3>Optional – Pressure Washing</h3>
 <div class="extra-group">
-<label>Total area to clean (m²)
-<input type="number" id="pwArea"></label>
-
+<label>Total area (m²)<input type="number" id="pwArea"></label>
 <label><input type="checkbox" id="pwJet"> Jet washing</label>
 <label><input type="checkbox" id="pwFung"> Fungicide treatment</label>
 <label><input type="checkbox" id="pwScrub"> Hard scrub</label>
@@ -174,103 +186,102 @@ This helps us understand your property structure, access requirements and allows
 <label><input type="checkbox" id="pwSeal"> Sealing</label>
 </div>
 
-<!-- FENCING -->
-<h3>9. Optional – Fence Installation</h3>
-<label>Fence length (metres)
-<input type="number" id="fenceMetres"></label>
+<h3>Optional – Fence Installation</h3>
+<label>Fence length (m)<input type="number" id="fenceMetres"></label>
 
 <button onclick="calculateQuote()">Get Fixed Price Estimate</button>
-
 <div class="result" id="result"></div>
 
 <script>
 function calculateQuote(){
-
-/* REQUIRED */
-if(!propertyType.value || !bedrooms.value || !conservatory.value || !storeys.value){
-alert("Please complete all required property details.");
+if(!propertyType.value||!bedrooms.value||!conservatory.value||!storeys.value){
+alert("Please complete required property details.");
 return;
 }
+const property=propertyType.value;
+const beds=bedrooms.value==="5+"?5:+bedrooms.value;
+const conserv=conservatory.value;
+const storeysVal=parseInt(storeys.value);
 
-const property = propertyType.value;
-const beds = bedrooms.value;
-const conserv = conservatory.value;
-const storeysVal = parseInt(storeys.value);
-
-/* PAINTING – PRICE HALVED */
-let paintCost = 0;
-const totalLength =
-(parseFloat(front.value)||0) +
-(parseFloat(rear.value)||0) +
-(parseFloat(sideLeft.value)||0) +
-(parseFloat(sideRight.value)||0);
-
-if(totalLength > 0){
-let area = totalLength * storeysVal * 2.5;
-let rate = parseFloat(surface.value);
-paintCost = (area * rate) * 0.5; // 50% reduction
-if(storeysVal === 2) paintCost *= 1.15;
-if(storeysVal === 3) paintCost *= 1.3;
+/* Painting 50% reduced */
+let paintCost=0;
+const totalLength=(+front.value||0)+(+rear.value||0)+(+sideLeft.value||0)+(+sideRight.value||0);
+if(totalLength>0){
+let area=totalLength*storeysVal*2.5;
+paintCost=(area*parseFloat(surface.value))*0.5;
+if(storeysVal===2)paintCost*=1.15;
+if(storeysVal===3)paintCost*=1.3;
 }
 
-/* ACCESS */
-const accessCost = parseFloat(document.querySelector('input[name="access"]:checked').value);
+/* Access */
+const accessCost=parseFloat(document.querySelector('input[name="access"]:checked').value);
 
-/* GUTTERING */
-let gutterCost = 0;
-if(gc.checked) gutterCost += (parseFloat(gcm.value)||0)*5;
-if(gw.checked) gutterCost += (parseFloat(gwm.value)||0)*5;
-if(gr.checked) gutterCost += (parseFloat(grm.value)||0)*15;
+/* Guttering */
+let gutterCost=0;
+if(gc.checked)gutterCost+=(+gcm.value||0)*5;
+if(gw.checked)gutterCost+=(+gwm.value||0)*5;
+if(gr.checked)gutterCost+=(+grm.value||0)*15;
 
 /* UPVC */
-let upvcCost = 0;
+let upvcCost=0;
 if(upvcRestore.checked){
-const table = {
-"bungalow-1":30,"terraced-2":40,"semi-2":50,"detached-2":60,
-"terraced-3":50,"semi-3":60,"detached-3":70
-};
-upvcCost = table[`${property}-${storeysVal}`] || 0;
-const bedCount = beds==="5+" ? 5 : parseInt(beds);
-if(bedCount > 1) upvcCost += (bedCount-1)*10;
-if(conserv==="yes" && upvcConservatory.checked) upvcCost += 40;
-if(conserv==="yes" && upvcRoof.checked) upvcCost += 60;
+const table={"bungalow-1":30,"terraced-2":40,"semi-2":50,"detached-2":60,"terraced-3":50,"semi-3":60,"detached-3":70};
+upvcCost=table[`${property}-${storeysVal}`]||0;
+if(beds>1)upvcCost+=(beds-1)*10;
+if(conserv==="yes"&&upvcConservatory.checked)upvcCost+=40;
+if(conserv==="yes"&&upvcRoof.checked)upvcCost+=60;
 }
 
-/* PRESSURE WASHING */
-let pwCost = 0;
-const pwAreaVal = parseFloat(pwArea.value)||0;
-if(pwAreaVal > 0){
-pwCost += 50;
-if(pwJet.checked) pwCost += pwAreaVal*2.75;
-if(pwFung.checked) pwCost += pwAreaVal*0.9;
-if(pwScrub.checked) pwCost += pwAreaVal*0.75;
-if(pwResand.checked) pwCost += pwAreaVal*3.9;
-if(pwSeal.checked) pwCost += pwAreaVal*4.5;
+/* Pressure washing */
+let pwCost=0;
+const pwA=+pwArea.value||0;
+if(pwA>0){
+pwCost+=50;
+if(pwJet.checked)pwCost+=pwA*2.75;
+if(pwFung.checked)pwCost+=pwA*0.9;
+if(pwScrub.checked)pwCost+=pwA*0.75;
+if(pwResand.checked)pwCost+=pwA*3.9;
+if(pwSeal.checked)pwCost+=pwA*4.5;
 }
 
-/* FENCING */
-let fenceCost = (parseFloat(fenceMetres.value)||0) * 145;
+/* Fence */
+let fenceCost=(+fenceMetres.value||0)*145;
 
-/* TOTAL */
-const total = paintCost + accessCost + gutterCost + upvcCost + pwCost + fenceCost;
+/* Total & Breakdown Table */
+const total=paintCost+accessCost+gutterCost+upvcCost+pwCost+fenceCost;
 
-result.innerHTML = `
-<strong>Your Fixed Price Estimate</strong><br><br>
-£${total.toFixed(0)}
-<div class="breakdown">
-<ul>
-${paintCost?'<li>Exterior painting included</li>':''}
-${accessCost?'<li>Access equipment included</li>':''}
-${gutterCost?'<li>Guttering services included</li>':''}
-${upvcCost?'<li>UPVC restoration included</li>':''}
-${pwCost?'<li>Pressure washing included</li>':''}
-${fenceCost?'<li>Fence installation included</li>':''}
-</ul>
-</div>
-`;
+let breakdown="<table style='width:100%;border-collapse:collapse;'>"+
+"<tr style='background:#ddd;'><th style='padding:8px;text-align:left;'>Service</th><th style='padding:8px;text-align:right;'>Price (£)</th></tr>";
+
+if(paintCost>0) breakdown+=`<tr><td style='padding:8px;'>Painting</td><td style='padding:8px;text-align:right;'>${paintCost.toFixed(0)}</td></tr>`;
+if(accessCost>0) breakdown+=`<tr><td style='padding:8px;'>Access</td><td style='padding:8px;text-align:right;'>${accessCost.toFixed(0)}</td></tr>`;
+if(gutterCost>0) breakdown+=`<tr><td style='padding:8px;'>Guttering</td><td style='padding:8px;text-align:right;'>${gutterCost.toFixed(0)}</td></tr>`;
+if(upvcCost>0) breakdown+=`<tr><td style='padding:8px;'>UPVC Restoration</td><td style='padding:8px;text-align:right;'>${upvcCost.toFixed(0)}</td></tr>`;
+if(pwCost>0) breakdown+=`<tr><td style='padding:8px;'>Pressure Washing</td><td style='padding:8px;text-align:right;'>${pwCost.toFixed(0)}</td></tr>`;
+if(fenceCost>0) breakdown+=`<tr><td style='padding:8px;'>Fence Installation</td><td style='padding:8px;text-align:right;'>${fenceCost.toFixed(0)}</td></tr>`;
+
+breakdown+=`<tr style='font-weight:bold; background:#eee;'><td style='padding:8px;'>Total</td><td style='padding:8px;text-align:right;'>${total.toFixed(0)}</td></tr>`;
+breakdown+="</table>";
+
+document.getElementById("result").innerHTML=breakdown;
 }
 </script>
 
+</main>
+
+<!-- FOOTER EXACT MATCH -->
+<footer>
+<p>📞 Call 07735 873694</p>
+<footer style="background:#000; color:#fff; text-align:center; padding:28px 15px; font-size:14px;">
+<div>
+© Home Repairs 4U | Service Areas, Doncaster
+<br><br>
+<a href="/services/guttering.html" style="color:#fff; text-decoration:underline;">Guttering</a> |
+<a href="/services/pressure-washing.html" style="color:#fff; text-decoration:underline;">Pressure Washing</a> |
+<a href="/services/fence-installation.html" style="color:#fff; text-decoration:underline;">Fencing</a> |
+<a href="/services/upvc-restoration.html" style="color:#fff; text-decoration:underline;">uPVC Restoration</a>
 </div>
+</footer>
+
 </body>
 </html>
