Add optional services section in test.html
Added optional services section to the form.

--- a/test.html
+++ b/test.html
@@ -140,6 +140,9 @@ We ask this to understand your property structure, access requirements, and to a
 <option value="3">3</option>
 </select>
 
+<h3>Choose one or more optional services</h3>
+<p class="small">All services below are optional. Leave blank if you do not require a specific service.</p>
+
 <h3>Exterior Painting (Optional)</h3>
 <p class="small">Leave blank if painting is not required.</p>
 <label>Front elevation length (m)</label>
