Add description for wall surface selection

--- a/test.html
+++ b/test.html
@@ -155,6 +155,7 @@ We ask this to understand your property structure, access requirements, and to a
 <input type="number" id="sideRight" step="0.1">
 
 <h3>Wall Surface</h3>
+<p class="small">What type of surface to be painted does your property have?.</p>
 <select id="surface">
 <option value="28">Render</option>
 <option value="32">Pebbledash</option>
