Revise title and description in test.html
Updated title and description for the external property makeover calculator. Added a canonical link for SEO.

--- a/test.html
+++ b/test.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>External Property Makeover Calculator | Home Repairs 4U</title>
+<title>External Property Makeover Quote Calculator | Home Repairs 4U</title>
+<link rel="canonical" href="https://homerepairs4u.com/services/instant-quote">
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="preload" as="image" href="/images/logo.webp" />
 
@@ -101,7 +102,7 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <h1>External Property Makeover Estimate Calculator</h1>
 
 <p class="small">
-This calculator is for full external property makeovers. Only the core property details are required — all services below are optional.
+This calculator is for our external property makeovers in Doncaster and surrounding areas. Only the core property details are required — all services below are optional.
 </p>
 
 <h3>Property Type</h3>
@@ -156,11 +157,11 @@ We ask this to understand your property structure, access requirements, and to a
 <h3>Wall Surface</h3>
 <p class="small">What type of surface to be painted does your property have?.</p>
 <select id="surface">
-<option value="28">Render</option>
-<option value="32">Pebbledash</option>
-<option value="30">Painted brick</option>
-<option value="35">Unpainted brick</option>
-<option value="38">Stone</option>
+<option value="18">Render</option>
+<option value="22">Pebbledash</option>
+<option value="20">Painted brick</option>
+<option value="25">Unpainted brick</option>
+<option value="28">Stone</option>
 </select>
 
 <h3>Access Required</h3>
