--- a/test.html
+++ b/test.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en-GB">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>External Property Makeover Quote Calculator | Home Repairs 4U</title>
-<link rel="canonical" href="https://homerepairs4u.com/services/instant-quote">
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Instant Quote Calculator – Home Repairs 4U, Doncaster</title>
 <link rel="icon" href="/favicon.png" type="image/png">
+<link rel="canonical" href="https://homerepairs4u.com/services/instant-quote">
+<meta name="description" content="Use Home Repairs 4U's instant quote calculator to quickly estimate the cost of exterior decorating, fencing, garden maintenance, guttering, pressure washing, and uPVC restoration in Doncaster DN6.">
+
 <link rel="preload" as="image" href="/images/logo.webp" />
 
 <style>
+/* ========== Base styles ========== */
 body{
 margin:0;
 padding:0;
@@ -39,59 +42,67 @@ font-weight:bold;
 border-radius:6px;
 border:2px solid #000;
 }
-.call-btn:hover{
-background:#333;
-}
+.call-btn:hover{ background:#333; }
 main{
-max-width:950px;
+max-width:900px;
 margin:0 auto;
 background:#fff;
-padding:30px 20px;
+padding:25px 15px;
 }
-h1,h2,h3{color:#111;}
-label{display:block;margin:8px 0;}
-input[type="number"],select{width:240px;padding:6px; margin-bottom:12px;}
-button{
-margin-top:30px;
+h1,h2,h3{ color:#111; }
+.option-title{
 background:#000;
 color:#fff;
-border:none;
-padding:15px 30px;
-font-size:18px;
-border-radius:6px;
-cursor:pointer;
+padding:10px 14px;
+border-radius:4px;
 font-weight:bold;
+margin:20px 0 10px 0;
 }
-button:hover{background:#333;}
-.result{
-margin-top:30px;
-padding:25px;
-background:#eef7f0;
-border-radius:6px;
-font-size:18px;
-}
-.small{font-size:14px;color:#555;}
-.extra-group{
-background:#fafafa;
-padding:15px;
-border-radius:5px;
+.service-btn{
+display:inline-block;
 margin-top:15px;
+padding:12px 24px;
+background:#000;
+color:#fff;
+font-size:18px;
+text-decoration:none;
+font-weight:bold;
+border-radius:6px;
+border:2px solid #000;
+}
+.service-btn:hover{ background:#333; }
+footer{
+background:#000;
+color:#fff;
+text-align:center;
+padding:25px 15px;
+margin-top:40px;
+font-size:14px;
 }
 </style>
-</head>
 
+<!-- FAQ Schema -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"FAQPage",
+"mainEntity":[
+{"@type":"Question","name":"How does the instant quote calculator work?","acceptedAnswer":{"@type":"Answer","text":"Select the services you require, enter basic property details, and receive an estimated price instantly. Final quotes are confirmed after a site visit."}},
+{"@type":"Question","name":"Which areas are covered?","acceptedAnswer":{"@type":"Answer","text":"We provide services in Doncaster DN6, Askern, and surrounding areas."}},
+{"@type":"Question","name":"Are the services insured?","acceptedAnswer":{"@type":"Answer","text":"Yes, all services are fully insured to ensure peace of mind."}},
+{"@type":"Question","name":"Can I book multiple services at once?","acceptedAnswer":{"@type":"Answer","text":"Yes, you can select multiple services in the calculator and schedule them together for convenience."}},
+{"@type":"Question","name":"Is the quote free?","acceptedAnswer":{"@type":"Answer","text":"Yes, the instant quote is free and there is no obligation to proceed."}}
+]
+}
+</script>
+
+</head>
 <body>
 
-<!-- HEADER -->
 <header>
-<img src="/images/logo.webp"
-alt="Home Repairs 4U logo"
-class="logo"
-width="600" height="200"
-loading="eager">
+<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200" loading="eager">
 <div style="text-align:center; margin-top:10px;">
-<a href="https://steely1968.github.io/"
-style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
+<a href="/" style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
 </div>
 <br>
 <a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
@@ -99,200 +110,69 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 
 <main>
 
-<h1>External Property Makeover Estimate Calculator</h1>
+<h1>Instant Quote Calculator – Home Services in Doncaster</h1>
 
-<p class="small">
-This calculator is for our external property makeovers in Doncaster and surrounding areas. Only the core property details are required — all services below are optional.
+<p>
+Our <strong>instant quote calculator</strong> gives homeowners in <strong>Doncaster, Askern DN6, and surrounding areas</strong> a fast and convenient way to estimate the cost of professional home improvement services. Simply choose the services you require, enter a few basic details, and receive an instant guide price before booking a free, no-obligation quotation.
 </p>
 
-<h3>Property Type</h3>
-<select id="propertyType" required>
-<option value="">-- Select --</option>
-<option value="bungalow">Bungalow</option>
-<option value="terraced">Terraced</option>
-<option value="semi">Semi-detached</option>
-<option value="detached">Detached</option>
-</select>
-<p class="small">
-We ask this to understand your property structure, access requirements, and to allow accurate pricing for optional services.
+<h2>How the Instant Quote Calculator Works</h2>
+<p>
+The calculator allows you to build a tailored estimate based on the type of services selected and the scope of work involved. Prices shown are intended as a helpful guide to assist with budgeting and planning. Final pricing is confirmed following a site visit to ensure accuracy and high-quality workmanship.
 </p>
 
-<h3>Number of Bedrooms</h3>
-<select id="bedrooms" required>
-<option value="">-- Select --</option>
-<option value="1">1</option>
-<option value="2">2</option>
-<option value="3">3</option>
-<option value="4">4</option>
-<option value="5+">5+</option>
-</select>
+<h2>Optional Services Available</h2>
 
-<h3>UPVC Conservatory</h3>
-<select id="conservatory" required>
-<option value="">-- Select --</option>
-<option value="yes">Yes</option>
-<option value="no">No</option>
-</select>
+<h3 class="option-title">Exterior Painting (Optional)</h3>
+<p>
+Covers the preparation and painting of walls, render, fences, railings, and other outdoor surfaces using high-quality, weather-resistant coatings to protect your property and improve kerb appeal.
+</p>
 
-<h3>Number of Storeys</h3>
-<select id="storeys" required>
-<option value="1">1</option>
-<option value="2">2</option>
-<option value="3">3</option>
-</select>
+<h3 class="option-title">Optional Guttering</h3>
+<p>
+Includes repairs, replacements, and maintenance of gutters and downpipes to prevent water damage and ensure effective drainage around your property.
+</p>
 
-<h3>Choose one or more optional services</h3>
-<p class="small">All services below are optional. Leave blank if you do not require a specific service.</p>
+<h3 class="option-title">Optional uPVC Restoration</h3>
+<p>
+Revitalises uPVC window frames, doors, fascias, soffits, and conservatories by removing dirt, oxidation, and discolouration without the need for replacement.
+</p>
 
-<h3>Exterior Painting (Optional)</h3>
-<label>Front elevation length (m)</label>
-<input type="number" id="front" step="0.1">
-<label>Rear elevation length (m)</label>
-<input type="number" id="rear" step="0.1">
-<label>Side left elevation length (m)</label>
-<input type="number" id="sideLeft" step="0.1">
-<label>Side right elevation length (m)</label>
-<input type="number" id="sideRight" step="0.1">
+<h3 class="option-title">Optional Pressure Washing</h3>
+<p>
+Restores driveways, patios, paths, decking, and brickwork by removing algae, moss, grime, and staining to improve appearance and safety.
+</p>
 
-<h3>Wall Surface</h3>
-<p class="small">What type of surface to be painted does your property have?.</p>
-<select id="surface">
-<option value="18">Render</option>
-<option value="22">Pebbledash</option>
-<option value="20">Painted brick</option>
-<option value="25">Unpainted brick</option>
-<option value="28">Stone</option>
-</select>
+<h3 class="option-title">Optional Fence Installation</h3>
+<p>
+Includes new fencing, replacements, repairs, and gates. A variety of timber fencing styles are available to suit privacy, security, and garden design requirements.
+</p>
 
-<h3>Access Required</h3>
-<p class="small">In your opinion what type of equipment do you feel we might need to paint your property.</p>
-<label><input type="radio" name="access" value="0" checked> Ladders</label>
-<label><input type="radio" name="access" value="450"> Scaffold tower</label>
-<label><input type="radio" name="access" value="750"> Scaffold over conservatory</label>
-<label><input type="radio" name="access" value="1200"> Full scaffold</label>
+<h2>Get Your Instant Estimate</h2>
+<p>
+Once you have selected your services and submitted the calculator, you will receive an instant estimated price. If you wish to proceed, we will arrange a free consultation to confirm measurements, discuss options, and provide a final written quote.
+</p>
 
-<h3>Optional – Guttering</h3>
-<p class="small">If you require any guttering services let us know here, if not leave blank.</p>
-<div class="extra-group">
-<label><input type="checkbox" id="gc"> Gutter clearing</label><input type="number" id="gcm">
-<label><input type="checkbox" id="gw"> Gutter & fascia washing</label><input type="number" id="gwm">
-<label><input type="checkbox" id="gr"> Gutter replacement</label><input type="number" id="grm">
-</div>
+<p>
+We proudly serve <strong>Doncaster, Askern DN6</strong>, and surrounding areas, delivering reliable, fully insured workmanship you can trust.
+</p>
 
-<h3>Optional – UPVC Restoration</h3>
-<p class="small">We may be able to restore some or all your uPVC and windows to new condition leave blank if not required.</p>
-<div class="extra-group">
-<label><input type="checkbox" id="upvcRestore"> Restore UPVC frames</label>
-<label><input type="checkbox" id="upvcConservatory"> Restore conservatory frames</label>
-<label><input type="checkbox" id="upvcRoof"> Clean conservatory roof</label>
-</div>
-
-<h3>Optional – Pressure Washing</h3>
-<p class="small">Do you require any pressure washing servives if not leave blank. If so enter how many square metres required.</p>
-<div class="extra-group">
-<label>Total area (m²)<input type="number" id="pwArea"></label>
-<label><input type="checkbox" id="pwJet"> Jet washing</label>
-<label><input type="checkbox" id="pwFung"> Fungicide treatment</label>
-<label><input type="checkbox" id="pwScrub"> Hard scrub</label>
-<label><input type="checkbox" id="pwResand"> Re-sanding</label>
-<label><input type="checkbox" id="pwSeal"> Sealing</label>
-</div>
-
-<h3>Optional – Fence Installation</h3>
-<p class="small">Do you rquire fence installation? If so enter how many metres if not leave blank.</p>
-<label>Fence length (m)<input type="number" id="fenceMetres"></label>
-
-<button onclick="calculateQuote()">Get Fixed Price Estimate</button>
-<div class="result" id="result"></div>
-
-<script>
-function calculateQuote(){
-if(!propertyType.value||!bedrooms.value||!conservatory.value||!storeys.value){
-alert("Please complete required property details.");
-return;
-}
-const property=propertyType.value;
-const beds=bedrooms.value==="5+"?5:+bedrooms.value;
-const conserv=conservatory.value;
-const storeysVal=parseInt(storeys.value);
-
-/* Painting 50% reduced */
-let paintCost=0;
-const totalLength=(+front.value||0)+(+rear.value||0)+(+sideLeft.value||0)+(+sideRight.value||0);
-if(totalLength>0){
-let area=totalLength*storeysVal*2.5;
-paintCost=(area*parseFloat(surface.value))*0.5;
-if(storeysVal===2)paintCost*=1.15;
-if(storeysVal===3)paintCost*=1.3;
-}
-
-/* Access */
-const accessCost=parseFloat(document.querySelector('input[name="access"]:checked').value);
-
-/* Guttering */
-let gutterCost=0;
-if(gc.checked)gutterCost+=(+gcm.value||0)*5;
-if(gw.checked)gutterCost+=(+gwm.value||0)*5;
-if(gr.checked)gutterCost+=(+grm.value||0)*15;
-
-/* UPVC */
-let upvcCost=0;
-if(upvcRestore.checked){
-const table={"bungalow-1":30,"terraced-2":40,"semi-2":50,"detached-2":60,"terraced-3":50,"semi-3":60,"detached-3":70};
-upvcCost=table[`${property}-${storeysVal}`]||0;
-if(beds>1)upvcCost+=(beds-1)*10;
-if(conserv==="yes"&&upvcConservatory.checked)upvcCost+=40;
-if(conserv==="yes"&&upvcRoof.checked)upvcCost+=60;
-}
-
-/* Pressure washing */
-let pwCost=0;
-const pwA=+pwArea.value||0;
-if(pwA>0){
-pwCost+=50;
-if(pwJet.checked)pwCost+=pwA*2.75;
-if(pwFung.checked)pwCost+=pwA*0.9;
-if(pwScrub.checked)pwCost+=pwA*0.75;
-if(pwResand.checked)pwCost+=pwA*3.9;
-if(pwSeal.checked)pwCost+=pwA*4.5;
-}
-
-/* Fence */
-let fenceCost=(+fenceMetres.value||0)*145;
-
-/* Total & Breakdown Table */
-const total=paintCost+accessCost+gutterCost+upvcCost+pwCost+fenceCost;
-
-let breakdown="<table style='width:100%;border-collapse:collapse;'>"+
-"<tr style='background:#ddd;'><th style='padding:8px;text-align:left;'>Service</th><th style='padding:8px;text-align:right;'>Price (£)</th></tr>";
-
-if(paintCost>0) breakdown+=`<tr><td style='padding:8px;'>Painting</td><td style='padding:8px;text-align:right;'>${paintCost.toFixed(0)}</td></tr>`;
-if(accessCost>0) breakdown+=`<tr><td style='padding:8px;'>Access</td><td style='padding:8px;text-align:right;'>${accessCost.toFixed(0)}</td></tr>`;
-if(gutterCost>0) breakdown+=`<tr><td style='padding:8px;'>Guttering</td><td style='padding:8px;text-align:right;'>${gutterCost.toFixed(0)}</td></tr>`;
-if(upvcCost>0) breakdown+=`<tr><td style='padding:8px;'>UPVC Restoration</td><td style='padding:8px;text-align:right;'>${upvcCost.toFixed(0)}</td></tr>`;
-if(pwCost>0) breakdown+=`<tr><td style='padding:8px;'>Pressure Washing</td><td style='padding:8px;text-align:right;'>${pwCost.toFixed(0)}</td></tr>`;
-if(fenceCost>0) breakdown+=`<tr><td style='padding:8px;'>Fence Installation</td><td style='padding:8px;text-align:right;'>${fenceCost.toFixed(0)}</td></tr>`;
-
-breakdown+=`<tr style='font-weight:bold; background:#eee;'><td style='padding:8px;'>Total</td><td style='padding:8px;text-align:right;'>${total.toFixed(0)}</td></tr>`;
-breakdown+="</table>";
-
-document.getElementById("result").innerHTML=breakdown;
-}
-</script>
+<a href="/contact.html" class="service-btn">Get Your Instant Quote</a>
 
 </main>
 
-<!-- FOOTER -->
 <footer>
 <p>📞 Call 07735 873694</p>
-<footer style="background:#000; color:#fff; text-align:center; padding:28px 15px; font-size:14px;">
 <div>
-© Home Repairs 4U | Service Areas, Doncaster
+<a href="/services/guttering.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Guttering</a> |
+<a href="/services/pressure-washing.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Pressure Washing</a> |
+<a href="/services/fence-installation.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Fencing</a> |
+<a href="/services/upvc-restoration.html" style="color:#fff; text-decoration:underline; margin:0 6px;">uPVC Restoration</a> |
+<a href="/services/service-areas.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Service Areas</a>
 <br><br>
-<a href="/services/guttering.html" style="color:#fff; text-decoration:underline;">Guttering</a> |
-<a href="/services/pressure-washing.html" style="color:#fff; text-decoration:underline;">Pressure Washing</a> |
-<a href="/services/fence-installation.html" style="color:#fff; text-decoration:underline;">Fencing</a> |
-<a href="/services/upvc-restoration.html" style="color:#fff; text-decoration:underline;">uPVC Restoration</a>
+<a href="https://www.facebook.com/people/Handyman-services/61584395621256/" target="_blank" rel="noopener" style="color:#fff; text-decoration:underline;">Facebook</a>
+<br><br>
+© Home Repairs 4U | Doncaster Home Services
 </div>
 </footer>
 
