Revise footer with additional service links
Updated footer section with new links and styling.

--- a/test.html
+++ b/test.html
@@ -249,7 +249,6 @@ We ask this to understand your property structure, access requirements, and to a
 
 <script>
 function calculateQuote(){
-// Calculator logic unchanged
 if(!propertyType.value||!bedrooms.value||!conservatory.value||!storeys.value){
 alert("Please complete required property details.");
 return;
@@ -319,17 +318,18 @@ document.getElementById("result").innerHTML=breakdown;
 </main>
 
 <!-- FOOTER -->
-<footer>
+<footer style="background:#000; color:#fff; text-align:center; padding:25px 15px; margin-top:40px; font-size:14px;">
 <p>📞 Call 07735 873694</p>
-<div style="background:#000; color:#fff; text-align:center; padding:28px 15px; font-size:14px;">
 <div>
-© Home Repairs 4U | Service Areas, Doncaster
+<a href="/services/guttering.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Guttering</a> |
+<a href="/services/pressure-washing.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Pressure Washing</a> |
+<a href="/services/fence-installation.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Fencing</a> |
+<a href="/services/upvc-restoration.html" style="color:#fff; text-decoration:underline; margin:0 6px;">uPVC Restoration</a> |
+<a href="/services/service-areas.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Service Areas</a>
 <br><br>
-<a href="/services/guttering.html" style="color:#fff; text-decoration:underline;">Guttering</a> |
-<a href="/services/pressure-washing.html" style="color:#fff; text-decoration:underline;">Pressure Washing</a> |
-<a href="/services/fence-installation.html" style="color:#fff; text-decoration:underline;">Fencing</a> |
-<a href="/services/upvc-restoration.html" style="color:#fff; text-decoration:underline;">uPVC Restoration</a>
-</div>
+<a href="https://www.facebook.com/people/Handyman-services/61584395621256/" target="_blank" rel="noopener" style="color:#fff; text-decoration:underline;">Facebook</a>
+<br><br>
+© Home Repairs 4U | Service Areas, Doncaster
 </div>
 </footer>
 
