--- a/test.html
+++ b/test.html
@@ -149,7 +149,7 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <h1>External Property Makeover Estimate Calculator</h1>
 
 <p class="small">
-This calculator is for full external property makeovers. Only the core property details are required — all services below are optional.
+This calculator is for our full external property services. Only the core property details are required — all services below are optional. You can select one or more services.
 </p>
 
 <h3>Property Type</h3>
