Update optional service titles in test.html

--- a/test.html
+++ b/test.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+v<!DOCTYPE html>
 <html lang="en-GB">
 <head>
 <meta charset="UTF-8">
@@ -191,7 +191,7 @@ We ask this to understand your property structure, access requirements, and to a
 <h3>Choose one or more optional services</h3>
 <p class="small">All services below are optional. Leave blank if you do not require a specific service.</p>
 
-<h3 class="optional-title">Exterior Painting (Optional)</h3>
+<h3 class="optional-title">Service 1 Exterior Painting (Optional)</h3>
 <p class="small">Leave blank if painting is not required.</p>
 <label>Front elevation length (m)</label>
 <input type="number" id="front" step="0.1">
@@ -217,21 +217,21 @@ We ask this to understand your property structure, access requirements, and to a
 <label><input type="radio" name="access" value="750"> Scaffold over conservatory</label>
 <label><input type="radio" name="access" value="1200"> Full scaffold</label>
 
-<h3 class="optional-title">Optional Guttering</h3>
+<h3 class="optional-title">Service 2 Optional Guttering</h3>
 <div class="extra-group">
 <label><input type="checkbox" id="gc"> Gutter clearing</label><input type="number" id="gcm">
 <label><input type="checkbox" id="gw"> Gutter & fascia washing</label><input type="number" id="gwm">
 <label><input type="checkbox" id="gr"> Gutter replacement</label><input type="number" id="grm">
 </div>
 
-<h3 class="optional-title">Optional UPVC Restoration</h3>
+<h3 class="optional-title">Service 3 Optional UPVC Restoration</h3>
 <div class="extra-group">
 <label><input type="checkbox" id="upvcRestore"> Restore UPVC frames</label>
 <label><input type="checkbox" id="upvcConservatory"> Restore conservatory frames</label>
 <label><input type="checkbox" id="upvcRoof"> Clean conservatory roof</label>
 </div>
 
-<h3 class="optional-title">Optional Pressure Washing</h3>
+<h3 class="optional-title">Service 4 Optional Pressure Washing</h3>
 <div class="extra-group">
 <label>Total area (m²)<input type="number" id="pwArea"></label>
 <label><input type="checkbox" id="pwJet"> Jet washing</label>
@@ -241,7 +241,7 @@ We ask this to understand your property structure, access requirements, and to a
 <label><input type="checkbox" id="pwSeal"> Sealing</label>
 </div>
 
-<h3 class="optional-title">Optional Fence Installation</h3>
+<h3 class="optional-title">Service 5 Optional Fence Installation</h3>
 <label>Fence length (m)<input type="number" id="fenceMetres"></label>
 
 <button onclick="calculateQuote()">Get Fixed Price Estimate</button>
