--- a/test.html
+++ b/test.html
@@ -193,6 +193,17 @@ We ask this to understand your property structure, access requirements, and to a
 
 <h3 class="optional-title">Service 1 Exterior Painting (Optional)</h3>
 <p class="small">Leave blank if painting is not required.</p>
+
+<details>
+<summary>More about Exterior Painting</summary>
+<p>
+We provide professional exterior painting for your property. This includes surface preparation, priming, and application of weather-resistant paint. We cover all elevations and provide colour advice to enhance kerb appeal.
+</p>
+<p>
+Optional extras include: textured finishes, protective coatings, and maintenance tips to prolong the life of your paintwork.
+</p>
+</details>
+  
 <label>Front elevation length (m)</label>
 <input type="number" id="front" step="0.1">
 <label>Rear elevation length (m)</label>
