--- a/test.html
+++ b/test.html
@@ -204,13 +204,13 @@ Optional extras include: textured finishes, protective coatings, and maintenance
 </p>
 </details>
   
-<label>Front elevation length (m)</label>
+<label>Front property width metres or large strides</label>
 <input type="number" id="front" step="0.1">
-<label>Rear elevation length (m)</label>
+<label>Rear property width metres or large strides</label>
 <input type="number" id="rear" step="0.1">
-<label>Side left elevation length (m)</label>
+<label>Left property width metres or large strides</label>
 <input type="number" id="sideLeft" step="0.1">
-<label>Side right elevation length (m)</label>
+<label>Right property width metres or large strides</label>
 <input type="number" id="sideRight" step="0.1">
 
 <h3>Wall Surface</h3>
