Enhance wall surface section with additional info
Updated the wall surface header and added a note about ladder selection.

--- a/test.html
+++ b/test.html
@@ -213,7 +213,7 @@ Optional extras include: textured finishes, protective coatings, and maintenance
 <label>Right property width metres or large strides</label>
 <input type="number" id="sideRight" step="0.1">
 
-<h3>Wall Surface</h3>
+<h3>Wall Surface For Painting</h3>
 <select id="surface">
 <option value="18">Render</option>
 <option value="22">Pebbledash</option>
@@ -223,6 +223,9 @@ Optional extras include: textured finishes, protective coatings, and maintenance
 </select>
 
 <h3>Access Required</h3>
+<p class="small">
+Select ladders if unsure!
+</p>
 <label><input type="radio" name="access" value="0" checked> Ladders</label>
 <label><input type="radio" name="access" value="450"> Scaffold tower</label>
 <label><input type="radio" name="access" value="750"> Scaffold over conservatory</label>
