--- a/test.html
+++ b/test.html
@@ -250,7 +250,8 @@ Measure in metres or large strides under wherever you have guttering.
 
 <h3 class="optional-title">Service 4 Optional Pressure Washing</h3>
 <div class="extra-group">
-<label>Total area (m²)<input type="number" id="pwArea"></label>
+<label>Total area (m²)</label>
+<input type="number" id="pwArea"></label>
 <label><input type="checkbox" id="pwJet"> Jet washing</label>
 <label><input type="checkbox" id="pwFung"> Fungicide treatment</label>
 <label><input type="checkbox" id="pwScrub"> Hard scrub</label>
@@ -259,7 +260,8 @@ Measure in metres or large strides under wherever you have guttering.
 </div>
 
 <h3 class="optional-title">Service 5 Optional Fence Installation</h3>
-<label>Fence length (m)<input type="number" id="fenceMetres"></label>
+<label>Fence length (m)</label>
+<input type="number" id="fenceMetres"></label>
 
 <button onclick="calculateQuote()">Get Fixed Price Estimate</button>
 <div class="result" id="result"></div>
